@@ -1,3 +1,9 @@
+2003-07-28  David Malcolm <david@davemalcolm.demon.co.uk>
+
+	* cong-editor-child-policy-flow-holder.c, cong-editor-child-policy-flow-holder.h, cong-editor-child-policy.c, cong-editor-child-policy.h, Makefile.am
+
+	New files: policy objects for managing the areas created for the children of an editor node
+
 2003-07-27  David Malcolm <david@davemalcolm.demon.co.uk>
 
 	* cong-editor-area-bin.c, cong-editor-area-border.c, cong-editor-area-composer.c, cong-editor-area-container.c, cong-editor-area-flow-holder-blocks.c, /cong-editor-area-flow-holder-inlines.c, cong-editor-area-flow-holder-single.c, cong-editor-area-pixbuf.c, cong-editor-area-spacer.c, cong-editor-area-span-tag.c, cong-editor-area-structural-tag.c, cong-editor-area-text.c, cong-editor-area-underline.c, cong-editor-area-unknown-tag.c, cong-editor-area.c, cong-editor-area.h, cong-editor-widget3.c, plugin-lists-area-listitem.c
